@@ -1,5 +1,6 @@
 package ru.skillbox.socnetwork.controller;
 
+import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -20,12 +21,13 @@ import java.util.List;
 
 @SpringBootTest
 @AutoConfigureMockMvc
-@TestPropertySource("/properties/application-test-roman.properties")
+@TestPropertySource("/application-test.properties")
+@AutoConfigureEmbeddedDatabase
+        (provider = AutoConfigureEmbeddedDatabase.DatabaseProvider.OPENTABLE,
+                refresh = AutoConfigureEmbeddedDatabase.RefreshMode.AFTER_CLASS)
 @Sql(value = {"/sql/001-create-schema.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
 @Sql(value = {"/sql/002-fill-tables.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
-@Sql(value = {"/sql/003-person-table-changes.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
-@Sql(value = {"/sql/004-dialog-and-message-table-changes.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
-@Sql(value = {"/sql/005-delete-tables.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
+@Sql(value = {"/sql/003-delete-tables.sql"}, executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
 public class DialogsControllerTest {
 
     @Autowired
@@ -37,24 +39,25 @@ public class DialogsControllerTest {
 
         List<Integer> id = List.of(11);
         this.mockMvc.perform(MockMvcRequestBuilders
-            .post("/api/v1/dialogs")
-            .contentType(MediaType.APPLICATION_JSON)
-            .content(Files.readAllBytes(Paths.get("src/test/resources/json/create_dialog_rq.json")))
-            .accept(MediaType.APPLICATION_JSON))
-            .andDo(MockMvcResultHandlers.print())
-            .andExpect(MockMvcResultMatchers.status().isOk())
-            .andExpect(MockMvcResultMatchers.jsonPath("$.error").value("string"))
-            .andExpect(MockMvcResultMatchers.jsonPath("$.data.id").value(11));
+                        .post("/api/v1/dialogs")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(Files.readAllBytes(Paths.get("src/test/resources/json/dialog/create_dialog_rq.json")))
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("$.error").value("string"))
+                .andExpect(MockMvcResultMatchers.jsonPath("$.data.id").value(11));
     }
+
     @Test
     @WithUserDetails("test@mail.ru")
     public void getDialogsTest() throws Exception {
         this.mockMvc.perform(MockMvcRequestBuilders
-            .get("/api/v1/dialogs"))
-            .andDo(MockMvcResultHandlers.print())
-            .andExpect(MockMvcResultMatchers.status().isOk())
-            .andExpect(MockMvcResultMatchers.content()
-            .json(Files.readString(Paths.get("src/test/resources/json/dialog_rs.json"))));
+                        .get("/api/v1/dialogs"))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.content()
+                        .json(Files.readString(Paths.get("src/test/resources/json/dialog/dialog_rs.json"))));
 
     }
 
@@ -62,24 +65,24 @@ public class DialogsControllerTest {
     @WithUserDetails("test@mail.ru")
     public void sendMessageTest() throws Exception {
         this.mockMvc.perform(MockMvcRequestBuilders
-            .post("/api/v1/dialogs/1/messages")
-            .contentType(MediaType.APPLICATION_JSON)
-            .content(Files.readAllBytes(Paths.get("src/test/resources/json/send_message_rq.json")))
-            .accept(MediaType.APPLICATION_JSON))
-            .andDo(MockMvcResultHandlers.print())
-            .andExpect(MockMvcResultMatchers.status().isOk())
-            .andExpect(MockMvcResultMatchers.content()
-            .json(Files.readString(Paths.get("src/test/resources/json/send_message_rs.json"))));
+                        .post("/api/v1/dialogs/1/messages")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(Files.readAllBytes(Paths.get("src/test/resources/json/dialog/send_message_rq.json")))
+                        .accept(MediaType.APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.content()
+                        .json(Files.readString(Paths.get("src/test/resources/json/dialog/send_message_rs.json"))));
     }
 
     @Test
     @WithUserDetails("test@mail.ru")
     public void getMessagesByDialogIdTest() throws Exception {
         this.mockMvc.perform(MockMvcRequestBuilders
-            .get("/api/v1/dialogs/1/messages"))
-            .andDo(MockMvcResultHandlers.print())
-            .andExpect(MockMvcResultMatchers.status().isOk())
-            .andExpect(MockMvcResultMatchers.content()
-            .json(Files.readString(Paths.get("src/test/resources/json/messages_by_dialog_id_rs.json"))));
+                        .get("/api/v1/dialogs/1/messages"))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(MockMvcResultMatchers.status().isOk())
+                .andExpect(MockMvcResultMatchers.content()
+                        .json(Files.readString(Paths.get("src/test/resources/json/dialog/messages_by_dialog_id_rs.json"))));
     }
 }
